# cigorn-Cigorn-Gateway

./: .gitignore  Access.h  BCHEncoder.cpp  BCHEncoder.h  BinaryEntry.cpp  BinaryEntry.h  CMakeLists.txt  CMakeLists.txt.backup-m4  Cigorn.h  CommThread.cpp  CommThread.h  CommandDefinitions.h  CommandLine.cpp  CommandLine.h  Console.cpp  Console.h  DBResult.h  DBResult.h.dal-complete  DatabaseManager.cpp  DatabaseManager.cpp.dal-complete  DatabaseManager.h  DatabaseManager.h.dal-complete  DeviceList.cpp  DeviceList.h  ESRICSV.cpp  ESRICSV.h  EventTimer.cpp  EventTimer.h  GlobalVar.h  Matrix192x64.cpp  Matrix192x64.h  MessageFlow.txt  MySite.xml  POCSAGEncoder.cpp  POCSAGEncoder.h  PagerTable.cpp  PagerTable.h  PostgresDatabase.cpp  PostgresDatabase.h  ProjectComments.txt  (+152 more)
adapters/: EthDeviceTableAdapter.cpp  EthDeviceTableAdapter.h  PagerTableAdapter.cpp  PagerTableAdapter.h  RouteTableAdapter.cpp  RouteTableAdapter.h.final-ok  SettingsTableAdapter.cpp  SettingsTableAdapter.h  TtyDeviceTableAdapter.cpp  TtyDeviceTableAdapter.h  WirelessNatTableAdapter.cpp  WirelessNatTableAdapter.h
backup/: TCPsocket.damaged-m4.cpp  TCPsocket.original.cpp
compile_progs/: cigorn_compiler  cigorn_compiler.cpp  cigorn_quick_compiler.cpp  cqc
database/: DatabaseFactory.cpp  DatabaseFactory.h  IDatabase.h
database/sqlserver/: SQLServerDatabase.cpp  SQLServerDatabase.h
docs/: WindowsPortRoadmap.md
platform/: Platform.h  PlatformConstants.h
platform/file/: PlatformFile.h
platform/network/: PlatformSocket.cpp  PlatformSocket.h
platform/process/: PlatformProcess.h
platform/socket/: PlatformSocket.h
platform/thread/: PlatformLockGuard.h  PlatformMutex.h  PlatformThread.h
platform/threading/: PlatformThread.h
platform/time/: PlatformTime.h
release-5.0.1/: README.md  ReleaseNotes.md
release-5.0.1/scripts/: install.sh
release-5.0.1/systemd/: cigorn.service
repositories/: DeviceRepository.cpp  DeviceRepository.cpp.ok  DeviceRepository.h  DeviceRepository.h.ok  EthDeviceRepository.cpp  IRepository.h  PagerRepository.cpp.ok  PagerRepository.h.final-ok  RouteRepository.cpp.ok  RouteRepository.h  SettingsRepository.h  TtyDeviceRepository.cpp.ok  TtyDeviceRepository.h  WirelessNatRepository.cpp  WirelessNatRepository.h
repositories.ok/: EthDeviceRepository.h.ok  PagerRepository.cpp.loadentries-ok  PagerRepository.h.ok  SettingsRepository.cpp.ok
tinyxml/: tinyxmlparser.cpp
